# electronic-shop-site

./: .env_example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
account/: admin.py  forms.py  models.py  repository.py  service.py  tasks.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/: confirm_reset_password.html  profile.html  profile_edit.html  reset_password.html  singin.html  singup.html
project_root/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
shop/: admin.py  choices.py  models.py  repository.py  service.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_product_image.py  0003_category_image.py  0004_usercart.py  0005_alter_usercart_quantity.py  0006_usercart_sum.py  0007_alter_usercart_sum.py
shop/templates/: about_us.html  cart.html  catalog.html  category.html  composite_сategory.html  discount_products.html  index_page.html  product.html
shop/templates/tags/: banner_section.html  discount_product_section.html  laptop_section.html  mobile_section.html  watch_section.html
shop/templatetags/: shop_tag.py
static/: index.html
static/css/: custom.css
templates/: base.html
templates/include/: footer.html  header.html
