[tool.poetry]
name = "ministore-site"
version = "0.1.0"
description = ""
authors = ["NaiNaniNai <nail02-02@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
environ = "^1.0"
django-environ = "^0.11.2"
django-migration-linter = "^5.0.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.3.0"}
psycopg2 = "^2.9.9"
django-redis = "^5.4.0"
celery = "^5.3.6"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
ignore="D018,H006,H030,H031"
